# ToyGenerator

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  Dockerfile  Hydra  README.md  build.sh  hackathon.md  particles.json  requirements.txt  setup.sh
.ci/: build_docs.sh  build_osx.sh  build_root_osx.sh  travis_osx.sh
algorithms/: CMakeLists.txt  accept.cpp  accept.h  amplitude.h  compositeparam.cpp  compositeparam.h  customparam.cpp  customparam.h  d02k3pi.cpp  d02k3pi.h  decay3body.h  decay3bodymixing.cpp  decay3bodymixing.h  eventparam.cpp  eventparam.h  generator.cpp  generator.h  param.cpp  param.h  particleparam.cpp  secondaries.cpp  secondaries.h  templatealgorithm.cpp  templatealgorithm.h  tupling.cpp  tupling.h
algorithms/Algorithms/: accept.h  compositeparam.h  customparam.h  d02k3pi.cpp  d02k3pi.h  dalitzplotefficiency.h  decay3body.h  decay3bodymixing.h  decaytimeefficiency.h  efficiency.cpp  efficiency.h  eventparam.cpp  eventparam.h  evtgenamplitude.h  evtgengenerator.h  generator.h  param.h  particleparam.h  secondaries.h  tupling.h
algorithms/dict/: AlgorithmsLinkDef.h
algorithms/include/: tupling.h
algorithms/params/: param.cpp  param.h
algorithms/src/: compositeparam.cpp  d02k3pi.cpp  dalitzplotefficiency.cpp  decay3body.cpp  decay3bodymixing.cpp  decaytimeefficiency.cpp  eventparam.cpp  evtgenamplitude.cpp  evtgengenerator.cpp  generator.cpp  param.cpp  particleparam.cpp  secondaries.cpp  tupling.cpp
apps/: CalculateFraction.cpp  EvtGenMap.cpp  PlotDalitzModel.cpp  ToyGenerator.cpp  getFraction.cpp  getMaxThreads.cpp
cfg/: babar2010.cfg  belle2008.cfg  belle2010.cfg  besiii2020.cfg
core/: CMakeLists.txt
core/Core/: descriptor.cpp  descriptor.h  distributetask.h  hydra.h  particlestore.h  sequence.h  threadpool.h
core/HydraCore/: algorithm.h  descriptor.h  distributetask.h  event.h  memorymanager.h  particle.h  particlestore.h  sequence.h  threadpool.h
core/dict/: CoreDict.h  CoreDict.xml  CoreLinkDef.h  HydraCoreLinkDef.h
core/include/: particle.h  threadpool.h
core/src/: descriptor.cpp  distributetask.cpp  event.cpp  hydra.cpp  particle.cpp  particlestore.cpp  sequence.cpp  threadpool.cpp
dict/: HYDRADict.h  HYDRALinkDef.h  HydraDict.h  HydraDict.xml  HydraLinkDef.h  ToyGenDict.h  ToyGenDict.xml  ToyGenLinkDef.h
doc/: customdoxygen.css  doxyfile
doc/Models/DalitzModel/: Makefile  angular.tex  introduction.tex  lhcb-symbols-def.tex  notes.bib  notes.tex  titlepage.tex
doc/READMEs/: compilation.md  configuration.md
include/: accept.h  algorithm.h  algorithmstore.h  algorithmwrapper.h  amplitude.h  clock.h  configuration.h  correlationutils.h  descriptor.h  efficiency.h  event.h  fourvector.h  generator.h  hydra.h  msgservice.h  param.h  particle.h  particlestore.h  phasespacegenerator.h  pyalgorithm.h  pywrapper.h  random.h  sequence.h  threadpool.h  threads.h  tupling.h  utils.h
models/: CMakeLists.txt  WSdcs.cpp  setup.sh
models/d02k3pi/: RScf.cpp  WScf.cpp
models/dalitzmodel/: CMakeLists.txt  angular.cpp  angular.h  clock.cpp  coefficient.cpp  coefficient.h  configfile.cpp  configfile.h  configureamplitude.cpp  configureamplitude.h  dalitzamplitude.cpp  dalitzamplitude.h  dalitzmixing.cpp  dalitzmixing.h  dalitzplot.cpp  dalitzplot.h  flatte.cpp  flatte.h  named.cpp  namedparameter.cpp  namedparameter.h  parameter.cpp  parameter.h  parameterstore.cpp  parameterstore.h  phasespace.cpp  phasespace.h  relbreitwigner.cpp  relbreitwigner.h  resonance.cpp  resonance.h
models/dalitzmodel/DalitzModel/: amplitude.cpp  amplitude.h  coefficient.h  configfile.h  configureamplitude.h  dalitzplot.h  flatte.cpp  flatte.h  named.h  parameter.cpp  parameter.h  phasespace.h  relbreitwigner.h  resonance.h
models/dalitzmodel/dict/: DalitzModelLinkDef.h
models/dalitzmodel/include/: amplitude.h  clock.h  flatte.h
models/dalitzmodel/src/: amplitude.cpp  configfile.cpp  configureamplitude.cpp  dalitzplot.cpp  flatte.cpp  parameter.cpp  phasespace.cpp  relbreitwigner.cpp  resonance.cpp
models/dict/: DalitzModelDict.h  DalitzModelDict.xml  DalitzModelLinkDef.h
options/: d02k3pi_options.py  d02kskk_map.py  d02kskk_options.py  example.py  kskk.dec  phsp_options.py
python/: Utils.py  d02k3pi_options.py  hydra.py  options.py
scripts/: setup.py
src/: accept.cpp  algorithm.cpp  algorithmstore.cpp  amplitude.cpp  clock.cpp  configuration.cpp  correlationutils.cpp  descriptor.cpp  fourvector.cpp  generator.cpp  hydra.cpp  particle.cpp  phasespacegenerator.cpp  pyalgorithm.cpp  pywrapper.cpp  random.cpp  threadpool.cpp  threads.cpp  tupling.cpp
test/: CMakeLists.txt  test.cpp  test.py  test_clock.cpp  test_clock.py  test_compositeparam.cpp  test_descriptor.cpp  test_descriptor.py  test_eventparam.cpp  test_fourvector.cpp  test_fourvector.py  test_generator.cpp  test_generator.py  test_particleparam.cpp  test_random.cpp
tests/: test_main.cpp
tmp/: threads.h
utils/: CMakeLists.txt
utils/Utils/: clock.h  correlationutils.h  fourvector.h  operations.h  progressbar.h  random.h  types.h
utils/dict/: UtilsDict.h  UtilsDict.xml  UtilsLinkDef.h
utils/include/: clock.h  correlationutils.h  fourvector.h  msgservice.h
utils/src/: clock.cpp  correlationutils.cpp  fourvector.cpp  progressbar.cpp  random.cpp
